# learning-programming

./: .ccls  .clang_complete  .directory  .gitignore  .vscode-ctags  CHANGELOG.md  README.md
ADS/data_structures/: binary_tree.py  linked_list.py  trie.py
ADS/dynamic/: candies.py
ADS/graps/: breadth_first_search.py  dijkstra.py
Assembly/: ahoy.asm  callmaxofthree.c  echo.asm  fib.asm  hello.asm  hello_world.asm  maxofthree.asm  power  power.asm
Bash/: basics.sh  example
Build Systems/CMake/: CMakeLists.txt  main.cpp
Build Systems/CMake/ToDoCore/: CMakeLists.txt  ToDo.cpp
Build Systems/CMake/src/: CMakeLists.txt
Build Systems/CMake/src/ToDoCore/: ToDo.hpp
Common Lisp/: HelloWorld.lisp
Emacs Lisp/: .#test2.el  basic_functions.el  basics.el  command_examples.el  data_structures.el  major_mode.el  misc.el  random_num.el  scripts.el  simple_examples.el  symbol.el  test.el  test2.el  text_processing.el  write_command.el  write_script.el
Go/: test.go
Others/: snippets.cson
PineScript/: death_to_bear.pine  death_to_bear_strategy.pine  kajetan_candles_overlays.pine  kajetan_chaikin_oscillator.pine  kajetan_choppiness.pine  kajetan_fve.pine  kajetan_moving_averages.pine  kajetan_multi_tf_ema.pine  kajetan_multi_tf_ma.pine  kajetan_price_bands.pine  kajetan_price_volume.pine  kajetan_secondary_trend_follower.pine  kajetan_ssl_hybrid.pine  kajetan_trend_change.pine  kajetan_trend_screener.pine  kajetan_true_trend.pine  kajtan_oscillator.pine  true_trend_strategy.pine  ucs_modified_slingshot.pine  wave_trend_signals_cb.pine  wave_trend_x.pine
Python/: sl.py
(+774 files in other folders)
